            - The equality/inequality tests have changed meaning: not only do
              the face *numbers* need to be the same, but the entire embedding
              permutations returned by vertices() need to be the same.
            - The old (simplex, face number) constructors are removed, with new
              (simplex, embedding permutation) constructors to replace them.
        Class FaceNumbering<dim, subdim>:
            - Everything in this class is now constexpr.
            - New class constants lexNumbering and oppositeDim.
            - Simplified the underlying web of template specialisations.
        Class FacePair:
            - New routines commonEdge() and oppositeEdge().
            - Increment/decrement operators now insist that the face
              pair is not past-the-end/before-the-start respectively.
        Class FacetPairing<dim>, FacetPairingBase<dim>:
            - Added a copy assignment operator.
            - Added move constructors and move assignment operators.
            - Added member swap(), and for FacetPairing<dim> a global swap().
            - Function fromTextRep() now returns by value (not pointer), and
              throws an exception on error (instead of returning null).
            - Added comparison operators == and !=.
            - Type IsoList now stores isomorphisms by value, not by pointer.
            - Routine findAutomorphisms() now returns a list by value, instead
              of filling a given list.
            - Routine findAllPairings() now uses a type-safe template-based
              mechanism for its callback function, instead of a function
              pointer with void* arguments.  Moreover, it no longer receives
              an extra (null, null) call once the enumeration has finished.
            - New constructor that reads a text representation from an
              input stream.
        Class FailedPrecondition:
            - New exception class.
        Class FaithfulAssignment: