@@ -179,6 +179,8 @@ void TriangulationBase<dim>::calculateFaces(TriangulationBase<dim>* tri) {
                 f = new Face<dim, dim-1>(s->component_);
                 std::get<dim - 1>(tri->faces_).push_back(f);
                 auto map = Face<dim, dim-1>::ordering(facet);
+                if (map.sign() != s->orientation_)
+                    map = map * Perm<dim + 1>(dim - 1, dim - 2);
 
                 std::get<dim-1>(s->faces_)[facet] = f;
                 std::get<dim-1>(s->mappings_)[facet] = map;
@@ -219,6 +221,8 @@ void TriangulationBase<dim>::calculateFaces(TriangulationBase<dim>* tri) {
                 f = new Face<dim, dim-2>(s->component_);
                 std::get<dim - 2>(tri->faces_).push_back(f);
                 auto map = Face<dim, dim-2>::ordering(start);
+                if (map.sign() != s->orientation_)
+                    map = map * Perm<dim + 1>(dim - 1, dim);
 
                 // Since the link of a codimension-2-face is a path or loop, the
                 // depth-first search is really just a straight line in either
@@ -310,6 +314,8 @@ void TriangulationBase<dim>::calculateFaces(TriangulationBase<dim>* tri) {
                 f = new Face<dim, subdim>(s->component_);
                 std::get<subdim>(tri->faces_).push_back(f);
                 auto map = Face<dim, subdim>::ordering(start);
+                if (map.sign() != s->orientation_)
+                    map = map * Perm<dim + 1>(dim - 1, dim);
 
                 std::get<subdim>(s->faces_)[start] = f;
                 std::get<subdim>(s->mappings_)[start] = map;
