@@ -60,8 +60,8 @@ Vertex 1, boundary, degree 3: 1 (0), 0 (1), 1 (2) : 1
 Edge 0, internal: 0 (01), 1 (12) : 0
 0 (01)
 1 (12)
-Edge 1, boundary: 0 (02) : 1
-0 (02)
+Edge 1, boundary: 0 (20) : 1
+0 (20)
 Edge 2, internal: 0 (12), 1 (01) : 2
 0 (12)
 1 (01)
@@ -69,9 +69,9 @@ Edge 3, boundary: 1 (02) : 3
 1 (02)
 2-simplex 0: 01 -> 1 (12), 12 -> 1 (01) : 0
 2-simplex 1: 01 -> 0 (12), 12 -> 0 (01) : 1
-Boundary component 0: 0 (02) : 0
+Boundary component 0: 0 (20) : 0
 Vertex 0, boundary, degree 3: 0 (2), 1 (1), 0 (0) : 0
-Edge 1, boundary: 0 (02) : 1
+Edge 1, boundary: 0 (20) : 1
 Boundary component 1: 1 (02) : 1
 Vertex 1, boundary, degree 3: 1 (0), 0 (1), 1 (2) : 1
 Edge 3, boundary: 1 (02) : 3
@@ -79,12 +79,12 @@ Component with 2 triangles: entire triangulation : 0
 Vertex 0, boundary, degree 3: 0 (2), 1 (1), 0 (0) : 0
 Vertex 1, boundary, degree 3: 1 (0), 0 (1), 1 (2) : 1
 Edge 0, internal: 0 (01), 1 (12) : 0
-Edge 1, boundary: 0 (02) : 1
+Edge 1, boundary: 0 (20) : 1
 Edge 2, internal: 0 (12), 1 (01) : 2
 Edge 3, boundary: 1 (02) : 3
 2-simplex 0: 01 -> 1 (12), 12 -> 1 (01) : 0
 2-simplex 1: 01 -> 0 (12), 12 -> 0 (01) : 1
-Boundary component 0: 0 (02) : 0
+Boundary component 0: 0 (20) : 0
 Boundary component 1: 1 (02) : 1
 
 Vertex 0, boundary, degree 8: 0 (0), 1 (0), 1 (3), 0 (3), 1 (2), 0 (2), 1 (1), 0 (1) : 0
@@ -114,26 +114,26 @@ Edge 3, internal, degree 4: 0 (23), 1 (30), 1 (23), 1 (12) : 3
 1 (12)
 Triangle 0, boundary: 0 (012) : 0
 0 (012)
-Triangle 1, boundary: 0 (013) : 1
-0 (013)
+Triangle 1, boundary: 0 (031) : 1
+0 (031)
 Triangle 2, internal: 0 (023), 1 (012) : 2
 0 (023)
 1 (012)
-Triangle 3, internal: 0 (123), 1 (130) : 3
-0 (123)
-1 (130)
-Triangle 4, internal: 1 (023), 1 (312) : 4
-1 (023)
-1 (312)
+Triangle 3, internal: 0 (132), 1 (103) : 3
+0 (132)
+1 (103)
+Triangle 4, internal: 1 (032), 1 (321) : 4
+1 (032)
+1 (321)
 3-simplex 0: 023 -> 1 (012), 123 -> 1 (130) : 0
 3-simplex 1: 012 -> 0 (023), 013 -> 0 (312), 023 -> 1 (312), 123 -> 1 (230) : 1
-Boundary component 0, finite: 0 (012), 0 (013) : 0
+Boundary component 0, finite: 0 (012), 0 (031) : 0
 Vertex 0, boundary, degree 8: 0 (0), 1 (0), 1 (3), 0 (3), 1 (2), 0 (2), 1 (1), 0 (1) : 0
 Edge 2, boundary, degree 4: 0 (03), 1 (02), 1 (31), 0 (21) : 2
 Edge 1, boundary, degree 3: 0 (31), 1 (01), 0 (02) : 1
 Edge 0, boundary, degree 1: 0 (01) : 0
 Triangle 0, boundary: 0 (012) : 0
-Triangle 1, boundary: 0 (013) : 1
+Triangle 1, boundary: 0 (031) : 1
 Component with 2 tetrahedra: entire triangulation : 0
 Vertex 0, boundary, degree 8: 0 (0), 1 (0), 1 (3), 0 (3), 1 (2), 0 (2), 1 (1), 0 (1) : 0
 Edge 0, boundary, degree 1: 0 (01) : 0
@@ -141,13 +141,13 @@ Edge 1, boundary, degree 3: 0 (31), 1 (01), 0 (02) : 1
 Edge 2, boundary, degree 4: 0 (03), 1 (02), 1 (31), 0 (21) : 2
 Edge 3, internal, degree 4: 0 (23), 1 (30), 1 (23), 1 (12) : 3
 Triangle 0, boundary: 0 (012) : 0
-Triangle 1, boundary: 0 (013) : 1
+Triangle 1, boundary: 0 (031) : 1
 Triangle 2, internal: 0 (023), 1 (012) : 2
-Triangle 3, internal: 0 (123), 1 (130) : 3
-Triangle 4, internal: 1 (023), 1 (312) : 4
+Triangle 3, internal: 0 (132), 1 (103) : 3
+Triangle 4, internal: 1 (032), 1 (321) : 4
 3-simplex 0: 023 -> 1 (012), 123 -> 1 (130) : 0
 3-simplex 1: 012 -> 0 (023), 013 -> 0 (312), 023 -> 1 (312), 123 -> 1 (230) : 1
-Boundary component 0, finite: 0 (012), 0 (013) : 0
+Boundary component 0, finite: 0 (012), 0 (031) : 0
 
 Vertex 0, boundary, degree 5: 0 (0), 1 (1), 0 (2), 1 (3), 0 (4) : 0
 0 (0)
@@ -224,31 +224,31 @@ Triangle 11, boundary, degree 1: 1 (014) : 11
 Tetrahedron 0, internal: 0 (0123), 1 (1234) : 0
 0 (0123)
 1 (1234)
-Tetrahedron 1, boundary: 0 (0124) : 1
-0 (0124)
+Tetrahedron 1, boundary: 0 (0142) : 1
+0 (0142)
 Tetrahedron 2, boundary: 0 (0134) : 2
 0 (0134)
-Tetrahedron 3, boundary: 0 (0234) : 3
-0 (0234)
+Tetrahedron 3, boundary: 0 (0243) : 3
+0 (0243)
 Tetrahedron 4, internal: 0 (1234), 1 (0123) : 4
 0 (1234)
 1 (0123)
 Tetrahedron 5, boundary: 1 (0124) : 5
 1 (0124)
-Tetrahedron 6, boundary: 1 (0134) : 6
-1 (0134)
+Tetrahedron 6, boundary: 1 (0143) : 6
+1 (0143)
 Tetrahedron 7, boundary: 1 (0234) : 7
 1 (0234)
 4-simplex 0: 0123 -> 1 (1234), 1234 -> 1 (0123) : 0
 4-simplex 1: 0123 -> 0 (1234), 1234 -> 0 (0123) : 1
-Boundary component 0, finite: 0 (0124), 1 (0134), 0 (0234), 0 (0134), 1 (0234), 1 (0124) : 0
+Boundary component 0, finite: 0 (0142), 1 (0143), 0 (0243), 0 (0134), 1 (0234), 1 (0124) : 0
 Vertex 0, boundary, degree 5: 0 (0), 1 (1), 0 (2), 1 (3), 0 (4) : 0
 Vertex 1, boundary, degree 5: 0 (1), 1 (0), 1 (2), 0 (3), 1 (4) : 1
 Edge 0, boundary, degree 4: 0 (01), 1 (12), 0 (23), 1 (34) : 0
-Edge 1, boundary, degree 3: 0 (02), 1 (13), 0 (24) : 1
 Edge 3, boundary, degree 1: 0 (04) : 3
-Edge 4, boundary, degree 4: 0 (12), 1 (01), 1 (23), 0 (34) : 4
+Edge 1, boundary, degree 3: 0 (02), 1 (13), 0 (24) : 1
 Edge 6, boundary, degree 2: 0 (14), 1 (03) : 6
+Edge 4, boundary, degree 4: 0 (12), 1 (01), 1 (23), 0 (34) : 4
 Edge 7, boundary, degree 1: 1 (04) : 7
 Edge 2, boundary, degree 2: 0 (03), 1 (14) : 2
 Edge 5, boundary, degree 3: 0 (13), 1 (02), 1 (24) : 5
@@ -264,9 +264,9 @@ Triangle 1, boundary, degree 2: 1 (023), 0 (134) : 1
 Triangle 8, boundary, degree 2: 0 (013), 1 (124) : 8
 Triangle 3, boundary, degree 3: 1 (012), 0 (123), 1 (234) : 3
 Triangle 10, boundary, degree 1: 1 (024) : 10
-Tetrahedron 1, boundary: 0 (0124) : 1
-Tetrahedron 6, boundary: 1 (0134) : 6
-Tetrahedron 3, boundary: 0 (0234) : 3
+Tetrahedron 1, boundary: 0 (0142) : 1
+Tetrahedron 6, boundary: 1 (0143) : 6
+Tetrahedron 3, boundary: 0 (0243) : 3
 Tetrahedron 2, boundary: 0 (0134) : 2
 Tetrahedron 7, boundary: 1 (0234) : 7
 Tetrahedron 5, boundary: 1 (0124) : 5
@@ -294,16 +294,16 @@ Triangle 9, boundary, degree 1: 1 (034) : 9
 Triangle 10, boundary, degree 1: 1 (024) : 10
 Triangle 11, boundary, degree 1: 1 (014) : 11
 Tetrahedron 0, internal: 0 (0123), 1 (1234) : 0
-Tetrahedron 1, boundary: 0 (0124) : 1
+Tetrahedron 1, boundary: 0 (0142) : 1
 Tetrahedron 2, boundary: 0 (0134) : 2
-Tetrahedron 3, boundary: 0 (0234) : 3
+Tetrahedron 3, boundary: 0 (0243) : 3
 Tetrahedron 4, internal: 0 (1234), 1 (0123) : 4
 Tetrahedron 5, boundary: 1 (0124) : 5
-Tetrahedron 6, boundary: 1 (0134) : 6
+Tetrahedron 6, boundary: 1 (0143) : 6
 Tetrahedron 7, boundary: 1 (0234) : 7
 4-simplex 0: 0123 -> 1 (1234), 1234 -> 1 (0123) : 0
 4-simplex 1: 0123 -> 0 (1234), 1234 -> 0 (0123) : 1
-Boundary component 0, finite: 0 (0124), 1 (0134), 0 (0234), 0 (0134), 1 (0234), 1 (0124) : 0
+Boundary component 0, finite: 0 (0142), 1 (0143), 0 (0243), 0 (0134), 1 (0234), 1 (0124) : 0
 
 Vertex 0, boundary, degree 6: 0 (0), 0 (1), 0 (2), 0 (3), 0 (4), 0 (5) : 0
 0 (0)
@@ -362,16 +362,16 @@ Triangle 8, boundary, degree 1: 0 (035) : 8
 0 (035)
 Triangle 9, boundary, degree 1: 0 (045) : 9
 0 (045)
-Tetrahedron 0, boundary, degree 3: 0 (0123), 0 (1234), 0 (2345) : 0
-0 (0123)
-0 (1234)
+Tetrahedron 0, boundary, degree 3: 0 (2345), 0 (1234), 0 (0123) : 0
 0 (2345)
+0 (1234)
+0 (0123)
 Tetrahedron 1, boundary, degree 2: 0 (0234), 0 (1345) : 1
 0 (0234)
 0 (1345)
-Tetrahedron 2, boundary, degree 2: 0 (0134), 0 (1245) : 2
-0 (0134)
+Tetrahedron 2, boundary, degree 2: 0 (1245), 0 (0134) : 2
 0 (1245)
+0 (0134)
 Tetrahedron 3, boundary, degree 2: 0 (0124), 0 (1235) : 3
 0 (0124)
 0 (1235)
@@ -388,18 +388,18 @@ Tetrahedron 8, boundary, degree 1: 0 (0135) : 8
 Tetrahedron 9, boundary, degree 1: 0 (0125) : 9
 0 (0125)
 Pentachoron 0, internal: 0 (01234), 0 (12345) : 0
-Pentachoron 1, boundary: 0 (01235) : 1
+Pentachoron 1, boundary: 0 (01253) : 1
 Pentachoron 2, boundary: 0 (01245) : 2
-Pentachoron 3, boundary: 0 (01345) : 3
+Pentachoron 3, boundary: 0 (01354) : 3
 Pentachoron 4, boundary: 0 (02345) : 4
-Boundary component 0: 0 (01235), 0 (01245), 0 (02345), 0 (01345) : 0
-Pentachoron 1, boundary: 0 (01235) : 1
+Boundary component 0: 0 (01253), 0 (01245), 0 (02345), 0 (01354) : 0
+Pentachoron 1, boundary: 0 (01253) : 1
 Pentachoron 2, boundary: 0 (01245) : 2
 Pentachoron 4, boundary: 0 (02345) : 4
-Pentachoron 3, boundary: 0 (01345) : 3
+Pentachoron 3, boundary: 0 (01354) : 3
 Component with 1 5-simplex: entire triangulation : 0
 5-simplex 0: 01234 -> 0 (12345), 12345 -> 0 (01234) : 0
-Boundary component 0: 0 (01235), 0 (01245), 0 (02345), 0 (01345) : 0
+Boundary component 0: 0 (01253), 0 (01245), 0 (02345), 0 (01354) : 0
 
 Complete cusp at vertex 0
 Complete cusp at vertex 1
