@@ -165,85 +165,85 @@ Edge 23, internal, degree 5: 14 (13), 17 (32), 22 (13), 21 (32), 16 (32)
 
 Triangle 0, internal: 0 (012), 4 (013)
 
-Triangle 1, internal: 0 (013), 3 (012)
+Triangle 1, internal: 0 (031), 3 (021)
 
 Triangle 2, internal: 0 (023), 2 (032)
 
-Triangle 3, internal: 0 (123), 1 (132)
+Triangle 3, internal: 0 (132), 1 (123)
 
 Triangle 4, internal: 1 (012), 6 (013)
 
-Triangle 5, internal: 1 (013), 7 (012)
+Triangle 5, internal: 1 (031), 7 (021)
 
 Triangle 6, internal: 1 (023), 5 (032)
 
 Triangle 7, internal: 2 (012), 9 (013)
 
-Triangle 8, internal: 2 (013), 10 (012)
+Triangle 8, internal: 2 (031), 10 (021)
 
-Triangle 9, internal: 2 (123), 8 (132)
+Triangle 9, internal: 2 (132), 8 (123)
 
-Triangle 10, internal: 3 (013), 12 (012)
+Triangle 10, internal: 3 (031), 12 (021)
 
 Triangle 11, internal: 3 (023), 7 (032)
 
-Triangle 12, internal: 3 (123), 11 (132)
+Triangle 12, internal: 3 (132), 11 (123)
 
 Triangle 13, internal: 4 (012), 15 (013)
 
 Triangle 14, internal: 4 (023), 14 (032)
 
-Triangle 15, internal: 4 (123), 13 (132)
+Triangle 15, internal: 4 (132), 13 (123)
 
 Triangle 16, internal: 5 (012), 12 (032)
 
-Triangle 17, internal: 5 (013), 16 (012)
+Triangle 17, internal: 5 (031), 16 (021)
 
-Triangle 18, internal: 5 (123), 8 (023)
+Triangle 18, internal: 5 (132), 8 (032)
 
 Triangle 19, internal: 6 (012), 17 (013)
 
 Triangle 20, internal: 6 (023), 13 (203)
 
-Triangle 21, internal: 6 (123), 12 (321)
+Triangle 21, internal: 6 (132), 12 (312)
 
-Triangle 22, internal: 7 (013), 19 (012)
+Triangle 22, internal: 7 (031), 19 (021)
 
-Triangle 23, internal: 7 (123), 18 (132)
+Triangle 23, internal: 7 (132), 18 (123)
 
 Triangle 24, internal: 8 (012), 14 (021)
 
-Triangle 25, internal: 8 (013), 10 (023)
+Triangle 25, internal: 8 (031), 10 (032)
 
 Triangle 26, internal: 9 (012), 18 (013)
 
 Triangle 27, internal: 9 (023), 19 (032)
 
-Triangle 28, internal: 9 (123), 13 (120)
+Triangle 28, internal: 9 (132), 13 (102)
 
-Triangle 29, internal: 10 (013), 21 (012)
+Triangle 29, internal: 10 (031), 21 (021)
 
-Triangle 30, internal: 10 (123), 20 (132)
+Triangle 30, internal: 10 (132), 20 (123)
 
 Triangle 31, internal: 11 (012), 20 (102)
 
-Triangle 32, internal: 11 (013), 12 (031)
+Triangle 32, internal: 11 (031), 12 (013)
 
 Triangle 33, internal: 11 (023), 15 (021)
 
-Triangle 34, internal: 13 (013), 20 (230)
+Triangle 34, internal: 13 (031), 20 (203)
 
-Triangle 35, internal: 14 (013), 17 (132)
+Triangle 35, internal: 14 (031), 17 (123)
 
-Triangle 36, internal: 14 (123), 16 (302)
+Triangle 36, internal: 14 (132), 16 (320)
 
 Triangle 37, internal: 15 (023), 22 (032)
 
-Triangle 38, internal: 15 (123), 18 (230)
+Triangle 38, internal: 15 (132), 18 (203)
 
-Triangle 39, internal: 16 (013), 20 (103)
+Triangle 39, internal: 16 (031), 20 (130)
 
-Triangle 40, internal: 16 (123), 21 (023)
+Triangle 40, internal: 16 (132), 21 (032)
 
 Triangle 41, internal: 17 (012), 19 (013)
 
@@ -251,9 +251,9 @@ Triangle 42, internal: 17 (023), 22 (231)
 
 Triangle 43, internal: 18 (012), 21 (013)
 
-Triangle 44, internal: 19 (123), 22 (012)
+Triangle 44, internal: 19 (132), 22 (021)
 
-Triangle 45, internal: 21 (123), 22 (031)
+Triangle 45, internal: 21 (132), 22 (013)
 
 Size of the skeleton:
   Triangles: 7
@@ -296,11 +296,11 @@ Edges:
 
 Vertex 0, internal, degree 17: 0 (0), 1 (0), 2 (0), 3 (0), 4 (0), 5 (0), 6 (0), 0 (1), 1 (1), 0 (2), 1 (2), 2 (1), 3 (1), 2 (2), 3 (2), 4 (1), 6 (2)
 
-Vertex 1, boundary, degree 4: 5 (1), 4 (2), 6 (1), 5 (2)
+Vertex 1, boundary, degree 4: 5 (2), 6 (1), 4 (2), 5 (1)
 
 Edge 0, internal: 0 (01), 6 (20)
 
-Edge 1, internal: 0 (02), 1 (01)
+Edge 1, internal: 0 (20), 1 (10)
 
 Edge 2, internal: 0 (12), 1 (12)
 
@@ -308,15 +308,15 @@ Edge 3, internal: 1 (02), 2 (01)
 
 Edge 4, internal: 2 (02), 3 (01)
 
-Edge 5, internal: 2 (12), 3 (12)
+Edge 5, internal: 2 (21), 3 (21)
 
-Edge 6, internal: 3 (02), 4 (01)
+Edge 6, internal: 3 (20), 4 (10)
 
 Edge 7, internal: 4 (02), 5 (01)
 
-Edge 8, internal: 4 (12), 6 (21)
+Edge 8, internal: 4 (21), 6 (12)
 
 Edge 9, internal: 5 (02), 6 (01)
 
-Edge 10, boundary: 5 (12)
+Edge 10, boundary: 5 (21)
 
